Bug 168777 - Spaces drop highlighting when crossing margin
Summary: Spaces drop highlighting when crossing margin
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-10-09 18:51 UTC by Telesto
Modified: 2025-10-20 15:03 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample (9.77 KB, application/vnd.oasis.opendocument.text)
2025-10-09 18:51 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2025-10-09 18:51:37 UTC
Description:
Spaces drop highlighting when crossing margin

Steps to Reproduce:
1. Open the attached file
2. Place cursor directly after 'following'
3. Hold and press spacebar until cursor passes the margin (highlighting of the spaces vanishes)
4. Place cursor before 'following' and press Enter. Now the spaces are highlighted again

Actual Results:
Initially the highlighting extends. So includes the 'spaces. When over margin, highlighting

Expected Results:
Spaces should be highlighted 


Reproducible: Always


User Profile Reset: No

Additional Info:
Found in
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b1c0c4838d2e006ffa8e72516569ce8d13bdbe01
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded

and in
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7afd11f8e476884662c18db85445752cc030b2e2
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded

Fine in
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1ea27b7e35faf6619112bf3f1d69e4ec41c0bf23
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2025-10-09 18:51:49 UTC
Created attachment 203230 [details]
Sample
Comment 2 BogdanB 2025-10-09 19:02:55 UTC
Confirm with
Version: 25.8.2.2 (X86_64)
Build ID: d401f2107ccab8f924a8e2df40f573aab7605b6f
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 raal 2025-10-10 16:54:30 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.8.
Adding Cc: to Mike Kaganski ; Could you possibly take a look at this one?
Thanks
 491962555da8451fb55c3ef6e130014913900731 is the first bad commit
commit 491962555da8451fb55c3ef6e130014913900731
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Thu Jan 25 11:18:23 2024 +0100

    source 853e13f9146e83b959bc53152ec103470d55fb4f

161400: tdf#57187: make sure to put trailing blanks to hole portion in narrow lines | https://gerrit.libreoffice.org/c/core/+/161400
Comment 4 Mike Kaganski 2025-10-10 21:09:20 UTC
https://gerrit.libreoffice.org/c/core/+/192191
Comment 5 Commit Notification 2025-10-11 10:06:25 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b36f181bb71c395f9c48c6358bea550ac4767839

tdf#168777: Trailing space must show all decorations, also for ODF

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-10-20 15:03:18 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/aa690147e302325bfbdc44c1fada42e7c59966e5

tdf#168777: Trailing space must show all decorations, also for ODF

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.