tdf#168777: Trailing space must show all decorations, also for ODF

Commit 853e13f9146e83b959bc53152ec103470d55fb4f (tdf#57187: make sure
to put trailing blanks to hole portion in narrow lines, 2023-12-30)
caused a regression, where trailing whitespace lost its decorations.

Commit a877c6ce97f73906c39cf800bc61d7d99847361c (tdf#164487: Introduce
"Show underline" MS Word compatibility option, 2025-02-26) took care
of the Word compatibility case, and introduced a compatibility flag
matching respective flag in Word. It only handled underline, as the
flag name in Word implied.

It turns out, that (1) Word's flag, despite its name, controls all
decorations of trailing writespace (highlignting, strike-out); and
(2) before the original commit, Writer's default was to show all the
decorations as well. Which means, that there is only one case when
the decorations must be omitted: if "Word-compatible trailing blanks"
is enabled, but "Underline Word-compatible trailing blanks" is off.

This change is intended to show trailing space's underline, overline,
strike-out, border, and highlighting correctly.

Change-Id: I68d0aaaa0a7b9610ec817728bd4acad92ef26fe1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192191
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit b36f181bb71c395f9c48c6358bea550ac4767839)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192712
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>